# mcp-hidden-bird

./: Cargo.toml  README.md  mcp-hidden-bird.sln
csharp/: .gitignore  Program.cs  mcp-hidden-bird.csproj  mcp-hidden-bird.http
csharp/Properties/: launchSettings.json
csharp/controllers/: SayHelloController.cs
src/: main.rs
src/service_servers/: say_hello.rs
